--- a/client/index.html
+++ b/client/index.html
@@ -15,9 +15,11 @@
     <link rel="stylesheet" href="./css/general.css" />
   </head>
   <body>
-    <div class="container-sm" id="listContainer">
+    <div class="container" id="listContainer">
       <h1 class="text-center text-light">Användare</h1>
-      <div class="row column-gap-2 row-gap-2" id="listCard"></div>
+      <div class="row justify-content-center" id="listCard">
+        <!-- Creating a div for each user element through JS - here -->
+      </div>
     </div>
 
     <script src="./script/script.js"></script>
