Whitespace for heading

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container" id="listContainer">
-      <h1 class="text-center text-light">Användare</h1>
+      <h1 class="pt-5 text-center text-light">Användare</h1>
       <div class="row justify-content-center" id="listCard">
         <!-- Creating a div for each user element through JS - here -->
       </div>
